--- a/app/[locale]/globals.css
+++ b/app/[locale]/globals.css
@@ -1,6 +1,6 @@
-@tailwind base;
+/* @tailwind base;
 @tailwind components;
-@tailwind utilities;
+@tailwind utilities; */
 .patient_dob{
     z-index: 2 !important;
 }
